--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "http//:ace-aryal.github.io/Currency-Converter-React",
   "name": "vite-react-starter",
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -16,6 +19,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.5",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.13",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
